--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <style type="text/css">
+    body
+    {
+      text-align:center;
+    }
+  </style>
 <body>
 <h1>HELLO WORLD</h1>
 <h1>草泥马，狗日的，世界</h1>
