--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <style type="text/css">
-    body
-    {
-      margin:auto;
-      text-align:center;
-    }
-  </style>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style type="text/css">
+		h1{
+			margin: auto;
+			text-align: center;
+		}
+	</style>
+</head>
 <body>
-<h1>HELLO WORLD</h1>
-<h1>草泥马，狗日的，世界</h1>
+	<h1>HELLO WORLD</h1>
+	<h1>草泥马,狗日的,世界</h1>
 </body>
 </html>
