--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-		h1,h2{
+		h1{
+			margin: auto;
+			text-align: center;
+		}
+		h2{
 			margin: auto;
 			text-align: center;
 		}
